# xfce4-dpr-changer

./: CMakeLists.txt  README.md  main.cpp  xfce4-dpr-changer.desktop.in
